fixed image sizes on mobile

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -58,3 +58,14 @@
   position: relative !important;
   height: unset !important;
 }
+
+@media screen and (max-width: 900px) {
+  .imageFrontPage {
+    width:40vw !important;
+  }
+
+  .image {
+    width: 40vw !important;
+
+  }
+}
